--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8" /><!--SIGNOS RAROS, NO USAR METATABGS NI METAKEYWORDS-->
-		<title>Mi primera web app</title>
+		<title>Pulse Comunidad para Gente Cool</title>
 		<!--SIEMPRE NORMALIZE PRIMERO, EL ORDEN DE LOS ESTILOS AFECTA-->
 		<link rel="stylesheet" href="normalize.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css' />
@@ -51,9 +51,9 @@
 					<a class="guardar_item" href="#">*</a><!--ICON FONT-->
 				</p>
 				<p class="votacion">
-					<a class="up" href="#">Up</a>
+					<a class="up" href="#">U</a>
 					3141
-					<a class="down" href="#">Down</a>
+					<a class="down" href="#">D</a>
 				</p>
 			</article>
 		</section>
