Iconos de tipografía
arreglos múltiples de diseño

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 			<figure id="avatar">
 				<img src="avatar.jpg" />
 				<figcaption><!--DESCRIPCIÓN DE TEXTO DE UNA IMÁGEN-->
-					*<!--EN ESTE CASO SERÁ UNA FLECHA PARA EL AVATAR-->
+					<!--EN ESTE CASO SERÁ UNA FLECHA PARA EL AVATAR-->
 				</figcaption>
 			</figure>
 		</header>
 		<nav><!--BOTONERA/MENÚ-->
 			<ul>
-				<li id="flechita_nav"><a href="#">*</a></li>
+				<li id="flechita_nav"><a href="#"></a></li>
 				<li><a href="#">Python</a></li>
 				<li><a href="#">HTML5</a></li>
 				<li><a href="#">Javascript</a></li>
@@ -48,12 +48,12 @@
 					<a class="tag_item" href="#">Categoría</a>
 					<span class="fecha_item">Hace <strong>5</strong>min</span>
 					<a class="comentarios_item" href="#">455</a>
-					<a class="guardar_item" href="#">*</a><!--ICON FONT-->
+					<a class="guardar_item" href="#"></a><!--ICON FONT-->
 				</p>
 				<p class="votacion">
-					<a class="up" href="#">U</a>
+					<a class="up" href="#"></a>
 					3141
-					<a class="down" href="#">D</a>
+					<a class="down" href="#"></a>
 				</p>
 			</article>
 		</section>
